# agp-mcp

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/service/: agp.rs  mod.rs
src/utils/: clickhouse.rs
tests/: e2e.py
