[package]
name = "agp-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "1.6.0", features = ["server", "transport-io", "transport-streamable-http-server", "schemars", "macros"] }
clap = { version = "4.5.48", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
anyhow = "1.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "std", "fmt"] }
axum = { version = "0.8.9", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
mockito = "1.6"
tokio = { version = "1.0", features = ["full", "test-util"] }
